new file:   Tank_bitty/Bullet.cpp 	new file:   Tank_bitty/Bullet.h 	deleted:    Tank_bitty/Release/Tank.obj 	deleted:    Tank_bitty/Release/Tank_bitty.exe 	deleted:    Tank_bitty/Release/Tank_bitty.exe.recipe 	deleted:    Tank_bitty/Release/Tank_bitty.iobj 	deleted:    Tank_bitty/Release/Tank_bitty.ipdb 	deleted:    Tank_bitty/Release/Tank_bitty.log 	deleted:    Tank_bitty/Release/Tank_bitty.pdb 	deleted:    Tank_bitty/Release/Tank_bitty.tlog/CL.command.1.tlog 	deleted:    Tank_bitty/Release/Tank_bitty.tlog/CL.read.1.tlog 	deleted:    Tank_bitty/Release/Tank_bitty.tlog/CL.write.1.tlog 	deleted:    Tank_bitty/Release/Tank_bitty.tlog/Tank_bitty.lastbuildstate 	deleted:    Tank_bitty/Release/Tank_bitty.tlog/link.command.1.tlog 	deleted:    Tank_bitty/Release/Tank_bitty.tlog/link.read.1.tlog 	deleted:    Tank_bitty/Release/Tank_bitty.tlog/link.write.1.tlog 	deleted:    Tank_bitty/Release/Tank_bitty.tlog/link.write.2u.tlog 	deleted:    Tank_bitty/Release/Tank_bitty.vcxproj.FileListAbsolute.txt 	deleted:    Tank_bitty/Release/main.obj 	deleted:    Tank_bitty/Release/vc143.pdb 	modified:   Tank_bitty/Tank.cpp 	modified:   Tank_bitty/Tank.h 	modified:   Tank_bitty/Tank_bitty.vcxproj 	modified:   Tank_bitty/Tank_bitty.vcxproj.filters 	modified:   Tank_bitty/main.cpp 	new file:   Tank_resource/resources/black.bmp

--- a/Tank_bitty/Tank_bitty.vcxproj
+++ b/Tank_bitty/Tank_bitty.vcxproj
@@ -127,10 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Tank.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Bullet.h" />
     <ClInclude Include="Tank.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
