--- a/Tank_bitty/Tank_bitty.vcxproj.filters
+++ b/Tank_bitty/Tank_bitty.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Tank.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Bullet.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Tank.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Bullet.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
